--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,25 @@
-<app-navbar></app-navbar>
+
+    <app-navbar-login></app-navbar-login>
+    <app-navbar></app-navbar>
+
+    <router-outlet></router-outlet>
+
+
+
+
+
+<div class="d-flex">
+
+
+
+    <!-- Sidebar -->
+  
+
+  
+  <!-- Fin Sidebar -->
+  
+  
+  
+  
+  
+  </div>
