--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,25 +1,44 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="#">Hidden brand</a>
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+<nav class="navbar navbar-expand-sm p-0 navbarStyle">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <a class="navbar-brand tituloLogo" routerLink="/home">
+        <img
+          src="/assets/brand/logo.svg"
+          alt=""
+          width="90"
+          height="60"
+          class="d-inline-block align-text-top"
+        />
+      </a>
+
+      <a
+        routerLink="/noticias"
+        class="nav-link textNavbar"
+        routerLinkActive="router-link-active"
+      >
+        <i class="fal fa-newspaper"></i> Noticias
+      </a>
+      <a
+        routerLink="/reUser"
+        class="nav-link textNavbar"
+        routerLinkActive="router-link-active"
+      >
+        <i class="fas fa-history"></i> Historia
+      </a>
+      <a
+        routerLink="/playerPage"
+        class="nav-link textNavbar"
+        routerLinkActive="router-link-active"
+      >
+        <i class="fas fa-users"></i> Plantilla
+      </a>
+      <a
+        routerLink="/tienda"
+        class="nav-link textNavbar"
+        routerLinkActive="router-link-active"
+      >
+        <i class="fas fa-bags-shopping"></i> Tienda
+      </a>
     </div>
-  </nav>
+  </div>
+</nav>
