--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,13 +1,11 @@
 <nav class="navbar navbar-expand-sm p-0 navbarStyle">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      <a class="navbar-brand tituloLogo" routerLink="/home">
+      <a class="navbar-brand" routerLink="/home">
         <img
           src="/assets/brand/logo.svg"
-          alt=""
-          width="90"
-          height="60"
-          class="d-inline-block align-text-top"
+          alt=""                  
+          class="d-inline-block align-text-top logoFiore"
         />
       </a>
 
