--- a/src/app/player/components/player-table/player-table.component.html
+++ b/src/app/player/components/player-table/player-table.component.html
@@ -1,5 +1,36 @@
 <table class="table table-striped table-hover">
- 
-  </table>
+  <thead class="table-dark">
+    <tr>
+      <th scope="col">Id</th>
+      <th scope="col">Nombre1</th>
+      <th scope="col">Nombre2</th>
+      <th scope="col">Apellido1</th>
+      <th scope="col">Apellido2</th>
+      <th scope="col">Posicion</th>         
+      <th scope="col">Pais</th>
+      <th scope="col"><i class="fas fa-edit"></i>Editar</th>   
+      <th scope="col"><i class="fas fa-trash-alt"></i>Eliminar</th>            
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1</th>            
+      <td>gdfdggf</td>
+      <td>ddffdf</td>
+      <td>ggghfgh</td>
+      <td>hgghhg</td>
+      <td>ghghfhg</td>          
+      <td>ggghhg</td>           
+      <td>
+        <button  type="button" class="btn btn-primary">Editar</button>  
+       <!-- <button [routerLink]="['/modificar', jugador.idJugador]" class="btn btn-primary btn-sm float-end">Editar</button> --> 
+      </td>
+      <td>
+        <button  type="button" class="btn btn-danger">Eliminar</button>
+        
+    </td>
+    
+    </tr>
+  </tbody>
+</table>
 
-  hola desde playertable
