--- a/src/app/player/pages/player-page/player-page.component.html
+++ b/src/app/player/pages/player-page/player-page.component.html
@@ -20,7 +20,7 @@
 
 
     
-    <app-player-table></app-player-table>
+    <app-player-table [listPlayersHijo]="listPlayers"></app-player-table>
    
       
   
