--- a/src/app/shared/navbar-login/navbar-login.component.html
+++ b/src/app/shared/navbar-login/navbar-login.component.html
@@ -17,7 +17,7 @@
         <i class="fas fa-user"></i> Iniciar Sesión
       </a>
 
-      <a style="cursor: pointer" class="nav-link">
+      <a style="cursor: pointer" class="nav-link textNavbar">
         <i class="fas fa-user-times"></i> Salir
       </a>
 
