--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -10,7 +10,7 @@
       </a>
 
       <a
-        routerLink="/noticias"
+        routerLink="/news"
         class="nav-link textNavbar"
         routerLinkActive="router-link-active"
       >
