--- a/src/app/admin/panel-admin/panel-admin.component.html
+++ b/src/app/admin/panel-admin/panel-admin.component.html
@@ -1,1 +1,32 @@
 
+
+
+
+
+
+<div class="d-flex">
+
+
+    <app-sidebar-busquedas></app-sidebar-busquedas>
+
+    <div class="container">
+
+        <div class="row">
+            <div class="col">
+              <app-input-busqueda
+                (onEnter)="buscar($event)"
+                (onDebounce)="sugerencias($event)"
+                [placeholder]="placeholder"
+              >
+              </app-input-busqueda>
+            </div>
+          </div>
+
+        <app-table-player class="container" [listPlayersHijo]="listPlayers"></app-table-player>
+    
+    </div>
+
+</div>
+
+
+
