--- a/src/app/shared/navbar-login/navbar-login.component.html
+++ b/src/app/shared/navbar-login/navbar-login.component.html
@@ -10,7 +10,7 @@
       </a>
 
       <a
-        routerLink="/logini"
+        routerLink="/login"
         class="nav-link textNavbar"
         routerLinkActive="router-link-active"
       >
