--- a/src/app/player/pages/player-page/player-page.component.html
+++ b/src/app/player/pages/player-page/player-page.component.html
@@ -20,7 +20,9 @@
 
 
     
-    <app-player-table [listPlayersHijo]="listPlayers"></app-player-table>
+ 
+
+    <app-player-card [listPlayersHijo]="listPlayers"></app-player-card>
    
       
   
