--- a/src/app/player/components/player-card/player-card.component.html
+++ b/src/app/player/components/player-card/player-card.component.html
@@ -9,7 +9,9 @@
         <div class="card-body p-0"><img src={{player.image}} alt="" class="img-fluid d-block mx-auto mb-1">
           <div class="card-text p-3 ">
             <h1>{{player.dorsal}} </h1>
-            <h5> <a href="#" class="text-dark">Ver jugador</a></h5>
+            <h5> <a [routerLink]="['/forPlayer', player.idPlayer]" class="text-dark">Ver jugador</a>               
+                
+            </h5>
            
           </div>
         </div>
