card for Player

--- a/src/app/player/pages/player-page/player-page.component.html
+++ b/src/app/player/pages/player-page/player-page.component.html
@@ -10,6 +10,11 @@
       </div>
     </div>
   </header>
+
+  <div class="container">
+    <strong>hola</strong>
+
+  </div>
   
   <div class="container" >
    
@@ -23,6 +28,11 @@
  
 
     <app-player-card [listPlayersHijo]="listPlayers"></app-player-card>
+
+ 
+
+
+
    
       
   
