--- a/src/app/player/pages/for-player/for-player.component.html
+++ b/src/app/player/pages/for-player/for-player.component.html
@@ -1,3 +1,15 @@
+<div *ngIf="!player; else playerDiv" class="alert alert-info">
+    Espere por favor!! 
+</div>
+
+<ng-template #playerDiv>
+    <div class="row">
+        <div class="col-12">
+            <h1> Player: {{player.name}} </h1>
+        </div>
+    </div>
+    
+</ng-template>
 
 
 
@@ -58,6 +70,10 @@ Espere por favor!!
 
 
 </ng-template>
+
+
+
+
 
 
 
