--- a/src/app/player/pages/for-player/for-player.component.html
+++ b/src/app/player/pages/for-player/for-player.component.html
@@ -1,75 +1,47 @@
-<div *ngIf="!player; else playerDiv" class="alert alert-info">
-    Espere por favor!! 
-</div>
-
-<ng-template #playerDiv>
-    <div class="row">
-        <div class="col-12">
-            <h1> Player: {{player.name}} </h1>
-        </div>
-    </div>
-    
-</ng-template>
-
-
-
+<div class="container">
 <div *ngIf="!player; else divPlayer" 
 class="alert alert-info">
 Espere por favor!! 
 </div>
 
-<ng-template #divPlayer>
-<div class="row">
-   <div class="col-12">
-       <h1> País: <small>{{player.name}}</small></h1>
-   </div>
+
+
+    <ng-template #divPlayer>
+        <div class="row">
+           <div class="col-12">
+               <h1><strong>{{player.name | uppercase}} {{player.last | uppercase}}</strong> </h1>
+           </div>
+        </div>
+        
+        <div class="row">
+           <div class="col-4">
+               
+               <img [src]="player.image" class="img-thumbnail" />
+           </div>
+        
+           <div class="col">
+               <h3>Datos del Jugador</h3>
+               <ul class="list-group">
+                   <li class="list-group-item">
+                       <strong>Position: </strong>{{ player.position}}
+                   </li>
+                   <li class="list-group-item">
+                       <strong>Dorsal: </strong>{{ player.dorsal }}
+                   </li>
+                   <li class="list-group-item">
+                       <strong>Nacionalidad: </strong>Colombiana
+                   </li>
+                   <li class="list-group-item">
+                    <strong>Partidos: </strong>23
+                </li>
+               </ul>
+           </div>
+        </div>
+        
+        </ng-template>
+
 </div>
 
-<div class="row">
-   <div class="col-4">
-       <h3>Bandera</h3>
-       <img [src]="player.image" class="img-thumbnail" />
-   </div>
-
-   <div class="col">
-       <h3>Información</h3>
-       <ul class="list-group">
-           <li class="list-group-item">
-               <strong>Población: </strong>{{ player.position}}
-           </li>
-           <li class="list-group-item">
-               <strong>Región: </strong>pais
-           </li>
-           <li class="list-group-item">
-               <strong>Área: </strong>bandera
-           </li>
-       </ul>
-   </div>
-</div>
-
-
-
-<!--
-
-<h3>Traduciones</h3>
-<div class="row">
-   <div class="col">
-       <span class="badge bg-primary mr-1">{{pais.translations.de}} </span>
-       <span class="badge bg-primary mr-1">{{pais.translations.es}} </span>
-       <span class="badge bg-primary mr-1">{{pais.translations.fr}} </span>            
-       <span class="badge bg-primary mr-1">{{pais.translations.ja}} </span>
-       <span class="badge bg-primary mr-1">{{pais.translations.br}} </span>            
-       <span class="badge bg-primary mr-1">{{pais.translations.pt}} </span>
-       <span class="badge bg-primary mr-1">{{pais.translations.nl}} </span>
-       <span class="badge bg-primary mr-1">{{pais.translations.hr}} </span>
-       <span class="badge bg-primary mr-1">{{pais.translations.fa}} </span>
-   </div>
-</div>
--->
-
-
-
-</ng-template>
 
 
 
@@ -77,13 +49,6 @@ Espere por favor!!
 
 
 
-
-
-
-pre para visaulizar codigo en la pantalla
-<pre class="mt-5">
-    {{player | json}}
-</pre>
 
 
 
