--- a/src/app/news/pages/news-page/news-page.component.html
+++ b/src/app/news/pages/news-page/news-page.component.html
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col-md-6">
           <h1>
-            <i class="fal fa-newspaper"></i> Noticias 
+            <i class="fal fa-newspaper"></i> Noticias
           </h1>
         </div>
       </div>
@@ -11,43 +11,19 @@
   </header> 
 
 <div class="container">
-  <div class="row row-cols-1 row-cols-md-3 g-4">
-    <div class="col">
-      <div class="card h-100">
-        <img src="assets/img/niche.jpg" class="card-img-top" alt="...">
+
+  <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div *ngFor="let noticia of listNews" class="col">
+      <div class="card">
+        <img [src]="noticia.urlToImage" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
+          <span class="badge bg-primary mb-1">{{ noticia.source.name }} </span>
+          <h5 class="card-tittle">{{ noticia.title }}</h5>
+          <p class="card-text">{{ noticia.description }}</p>
+          <a [href]="noticia.url" target="blank" class="btn btn-primary btn-block">Ver Noticia</a>
         </div>
       </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="assets/img/niche.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card h-100">
-        <img src="assets/img/niche.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
-      </div>
-    </div>
+    </div>   
   </div>
 
 
