--- a/src/app/player/components/player-card/player-card.component.html
+++ b/src/app/player/components/player-card/player-card.component.html
@@ -5,11 +5,11 @@
   <div class="row pb-5 mb-4">
     <div class="col-lg-3 col-md-6 mb-4 mb-lg-0" *ngFor="let player of listPlayersHijo">
       <!-- Card-->
-      <div class="card shadow-sm border-0 rounded">
-        <div class="card-body p-0"><img src={{player.image}} alt="" class="img-fluid d-block mx-auto mb-1">
-          <div class="card-text p-3 ">
+      <div class="card shadow-sm border-20 rounded">
+        <div class="card-body p-0 "><img src={{player.image}} alt="" class="img-fluid d-block mx-auto mb-1">
+          <div class="card-text p-3 cardStyle">
             <h1>{{player.dorsal}} </h1>
-            <h5> <a [routerLink]="['/forPlayer', player.idPlayer]" class="text-dark">Ver jugador</a>               
+            <h5> <a [routerLink]="['/forPlayer', player.idPlayer]" class="text-dark text-white">Ver jugador</a>               
                 
             </h5>
            
