--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,20 +8,22 @@
 
 
 
-
+<!--
 
 <div class="d-flex">
 
 
 
-    <!-- Sidebar -->
+     Sidebar -->
 
 
   
-  <!-- Fin Sidebar -->
+  <!-- Fin Sidebar 
   
   
   
   
   
   </div>
+
+  -->
