--- a/src/app/signIn/login/login.component.html
+++ b/src/app/signIn/login/login.component.html
@@ -1,26 +1,63 @@
-<div class="row">
-    <div class="col-md-6 mx-auto mt-5">
-        <div class="card">
-            <div class="card-body">
-                <h1 class="text-center ">LOGIN</h1>                             
-                    <div class="form-group entrada">
-                        <label for="nombreUsuario">Usuario</label>
-                        <input [(ngModel)]="user.nameUser" type="email" class="form-control">
-                    </div>
-                    <div class="form-group entrada">
-                        <label for="password">Contraseña</label>
-                        <input [(ngModel)]="user.password" type="password" class="form-control">
-                    </div>
 
-                    <div class="d-grid gap-2">
-                      <button class="btn btn-primary" type="button" (click)="logIn()">Iniciar Sesión</button>
-                    </div>
+
+<body>
+
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-md-6 mt-5 mx-auto">
+
+                <div>
+                    <h1>Bienvenido</h1>
+                    <p>hjhjdsdsdjdsjdjhdsdlkssssflklkfklfdkssssssssssssssssssssssssssssssssssflkdfslfldfld</p>
+                </div>
+
+                
+                
+                
+            </div> 
+    
+    
+            <div class="col-md-4 mx-auto mt-5">
+                <div class="card login">
                     
-                                       
-                    <div class="form-group mt-3">
-                        <p>Deseas crear una cuenta?<a [routerLink]="['/reUser']"> Registrar </a></p>
-                  </div>
+                    <div class="card-body">
+                        <h1 class="text-center ">LOGIN</h1>                             
+                            <div class="form-group entrada">
+                                <label for="nombreUsuario">Usuario</label>
+                                <input [(ngModel)]="user.nameUser" type="email" class="form-control">
+                            </div>
+                            <div class="form-group entrada mb-3">
+                                <label for="password">Contraseña</label>
+                                <input [(ngModel)]="user.password" type="password" class="form-control">
+                            </div>
+        
+                            <div class="d-grid gap-2">
+                              <button class="btn btn-primary" type="button" (click)="logIn()">Iniciar Sesión</button>
+                            </div>                        
+                            
+                                               
+                            <div class="form-group mt-3">
+                                <p>Deseas crear una cuenta?<a [routerLink]="['/reUser']"> Registrar </a></p>
+                          </div>
+                    </div>
+                </div>
             </div>
+    
+            
         </div>
+
     </div>
-</div>
+
+   
+    
+</body>
+
+
+
+
+
+
+
+
