component card of playerPage

--- a/src/app/home/home-page/home-page.component.html
+++ b/src/app/home/home-page/home-page.component.html
@@ -7,6 +7,14 @@
 
 </section>
 
-<div class="container">
-  <app-player-page> </app-player-page>
+<div class="body">
+  <div class="container">
+    <div class="row">
+      <div class="col-10 mx-auto mt-5 mb-5">
+        <app-card></app-card>
+      </div>
+    </div>
+    
+  </div>
 </div>
+
