--- a/src/app/home/home-page/home-page.component.css
+++ b/src/app/home/home-page/home-page.component.css
@@ -19,3 +19,15 @@
 	text-align: center;
 	margin-left: -200px;
 }
+
+
+.body {
+    background-image: linear-gradient(rgba(238, 228, 236, 0.5),rgba(66, 43, 65, 0.5));
+    /*background-image: url('./assets/fondoo.jpg'); */
+    background-position: center;
+    background-size: cover;
+
+}
+
+
+
