--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -24,7 +24,7 @@
         <i class="fas fa-history"></i> Historia
       </a>
       <a
-        routerLink="/playerPage"
+        routerLink="./plantilla"
         class="nav-link textNavbar"
         routerLinkActive="router-link-active"
       >
