ajustes lazyLoad player

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -24,14 +24,14 @@
         <i class="fas fa-history"></i> Historia
       </a>
       <a
-        routerLink="./plantilla"
+        routerLink="/player/plantilla"
         class="nav-link textNavbar"
         routerLinkActive="router-link-active"
       >
         <i class="fas fa-users"></i> Plantilla
       </a>
       <a
-        routerLink="/tienda"
+        routerLink="/player/registerPlayer"
         class="nav-link textNavbar"
         routerLinkActive="router-link-active"
       >
