--- a/src/app/player/pages/player-page/player-page.component.html
+++ b/src/app/player/pages/player-page/player-page.component.html
@@ -1,31 +1,29 @@
-
 <header id="main-header" class="py-2 lack text-black mb-4">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h1>
-            <i class="fas fa-users"></i> Equipo principal 
-          </h1>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h1><i class="fas fa-users"></i> Equipo principal</h1>
       </div>
     </div>
-  </header>
-
-
-  
-  <div class="container" >   
-    <h2 class="font-weight-bold mb-2">{{namesPositions.por | uppercase}}</h2>
-    <hr/>
-    <app-player-card [listPlayersHijo]="arqueros"></app-player-card> 
-    <h2 class="font-weight-bold mb-2">{{namesPositions.def | uppercase}}</h2>
-    <hr/>
-    <app-player-card [listPlayersHijo]="defensas"></app-player-card> 
-    <h2 class="font-weight-bold mb-2">{{namesPositions.med | uppercase}}</h2>
-    <hr/>
-    <app-player-card [listPlayersHijo]="mediocampistas"></app-player-card> 
-    <h2 class="font-weight-bold mb-2">{{namesPositions.ata | uppercase}}</h2>
-    <hr/>
-    <app-player-card [listPlayersHijo]="delanteros"></app-player-card> 
-                  
-  
   </div>
+</header>
+
+<div class="container">
+  <h2 class="font-weight-bold mb-2">{{ namesPositions.por | uppercase }}</h2>
+  <hr />
+  <app-player-card [listPlayersHijo]="arqueros"></app-player-card>
+  <h2 class="font-weight-bold mb-2">{{ namesPositions.def | uppercase }}</h2>
+  <hr />
+  <app-player-card [listPlayersHijo]="defensas"></app-player-card>
+  <h2 class="font-weight-bold mb-2">{{ namesPositions.med | uppercase }}</h2>
+  <hr />
+  <app-player-card [listPlayersHijo]="mediocampistas"></app-player-card>
+  <h2 class="font-weight-bold mb-2">{{ namesPositions.ata | uppercase }}</h2>
+  <hr />
+  <app-player-card [listPlayersHijo]="delanteros"></app-player-card>
+
+
+  <h1>Historial</h1>
+  <hr />
+  
+</div>
