--- a/src/app/shared/navbar-login/navbar-login.component.html
+++ b/src/app/shared/navbar-login/navbar-login.component.html
@@ -22,9 +22,9 @@
       </a>
 
       <div class="logos ms-auto">
-        <a class="navbar-brand logo" routerLink="/home">
+        <a class="navbar-brand " routerLink="/home">
           <img
-            src="/assets/marcas/adidas.svg"
+            src="/assets/marcas/puma.svg"
             alt=""
             width="50"
             height="60"
@@ -42,9 +42,9 @@
           />
         </a>
 
-        <a class="navbar-brand" routerLink="/home">
+        <a class="navbar-brand logo" routerLink="/home">
           <img
-            src="/assets/marcas/col.svg"
+            src="/assets/marcas/mazda.svg"
             alt=""
             width="40"
             height="50"
