--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <a class="navbar-brand" routerLink="/home">
         <img
           src="/assets/brand/logo.svg"
-          alt=""                  
+          alt=""
           class="d-inline-block align-text-top logoFiore"
         />
       </a>
@@ -36,6 +36,13 @@
         routerLinkActive="router-link-active"
       >
         <i class="fas fa-bags-shopping"></i> Tienda
+      </a>
+      <a
+        routerLink="/player/historialPage"
+        class="nav-link textNavbar"
+        routerLinkActive="router-link-active"
+      >
+        <i class="fas fa-bags-shopping"></i> Historial
       </a>
     </div>
   </div>
