estilo gradiente navbar

--- a/src/app/shared/navbar-login/navbar-login.component.html
+++ b/src/app/shared/navbar-login/navbar-login.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="collapse navbar-collapse">
       <a
-        routerLink="/register"
+        routerLink="/signin/register"
         class="nav-link textNavbar"
         routerLinkActive="router-link-active"
       >
@@ -10,7 +10,7 @@
       </a>
 
       <a
-        routerLink="/login"
+        routerLink="/signin/login"
         class="nav-link textNavbar"
         routerLinkActive="router-link-active"
       >
