--- a/src/app/shared/navbar-login/navbar-login.component.css
+++ b/src/app/shared/navbar-login/navbar-login.component.css
@@ -1,5 +1,6 @@
 .navbarStyle{
-    background-color: rgb(0, 0, 0);
+    background: linear-gradient( rgb(193, 90, 202), black);
+  /*  background-color: rgb(193, 90, 202);*/
     height: 40px;
     width: 100%;
     
