--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -1,5 +1,6 @@
 .navbarStyle{
-    background-color: rgb(40, 28, 73);  
+    background: linear-gradient(black, rgb(193, 90, 202));
+  /*  background-color: rgb(40, 28, 73);  */
     height: 60px;  
     width: 100%;
 }
