--- a/src/app/signIn/pages/login/login.component.html
+++ b/src/app/signIn/pages/login/login.component.html
@@ -39,7 +39,7 @@
                             
                                                
                             <div class="form-group mt-3">
-                                <p>Deseas crear una cuenta?<a [routerLink]="['/reUser']"> Registrar </a></p>
+                                <p>Deseas crear una cuenta?<a [routerLink]="['/signin/register']"> Registrar </a></p>
                           </div>
                     </div>
                 </div>
